<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">What the Blank?</string>
    <string name="app_name_condensed">WhatTheBlank</string>
    <string name="url_website">www.moyersoftware.com</string>
    <string name="facebook_app_id">943466632343086</string>
    <string name="gcm_sender_id">23881468737</string>

    <!-- Loading screen -->
    <string name="loading_btn_email">Register with Email</string>
    <string name="loading_btn_facebook">Facebook</string>
    <string name="loading_btn_google">Google+</string>

    <!-- Register screen -->
    <string name="title_activity_register">Create an Account</string>
    <string name="register_btn">Register</string>
    <string name="register_title_name">Name</string>
    <string name="register_title_username">Username</string>
    <string name="register_title_email">Email</string>
    <string name="register_title_password">Password</string>
    <string name="register_title_password_repeat">Repeat Password</string>
    <string name="register_login_btn">Already have an account?</string>

    <!-- Login screen -->
    <string name="title_activity_login">Log In</string>
    <string name="login_btn">Log In</string>
    <string name="login_title_email">Email or Username</string>
    <string name="login_title_password">Password</string>
    <string name="login_register_btn">Don\'t have an account?</string>

    <!-- Home screen -->
    <string name="home_btn_how_to">HOW TO PLAY</string>
    <string name="home_btn_store">STORE</string>
    <string name="home_btn_join_game">JOIN A GAME</string>
    <string name="home_btn_host_game">HOST A GAME</string>
    <string name="home_stat_games_total">Games Played</string>
    <string name="home_stat_time_solved">Avg. Time to be Solved</string>
    <string name="home_stat_skill_ranking">Skill Ranking</string>
    <string name="home_how_to_desc">What the Blank is a game to be played with at least 4 people.
        To begin, everyone is split into equal sized teams and every person is given the same amount
        of pieces of paper (cards). The default amount per person is 3. On those cards, every person
        writes down a phrase, word, action, etc. in secret. They cannot let anyone else see what
        they write. Once they have them filled out, they would fold them and put them into a hat
        along with everyone else\'s cards. They would then be mixed up and the game can begin.
        \n\nNext, it is decided which team will begin. They will have an amount of time to figure
        out what the card says. By default, it is usually 30 seconds. \n\nThe game is in three
        rounds. The first round allows the person holding the card to say, act, and do anything they
        want to do to get their partners to guess the card correctly. They are just not allowed to
        say what is actually on the card. For example: if the card was \'cat\', they can say: \"it\'s
        raining this and dogs\" so that the teammates would realize the person was actually saying
        \"it\'s raining CATS and dogs\" and so they would guess cats and the card holder would go on
        to the next randomly picked card. They do this until the 30 seconds runs out. \n\nThen the
        cards that were guessed correctly are tallied up and counted as points. The remaining cards
        are still in the hat and the next team goes until their time runs out. Then the next team,
        and it keeps going until the cards run out.\n\nThe second round then begins. This round,
        the person holding the card can only act. They cannot make any noises at all.\n\nThe third
        round begins when all the cards have been correctly guessed by the teams. This round, the
        person holding the card can only say one word. They can\'t act out anything. They can\'t say
        any other words. \n\nOnce all cards are guessed correctly, the scores are tallied and the
        team with the most points wins.</string>

    <!-- Settings screen -->
    <string name="settings_account_header">MY ACCOUNT</string>
    <string name="settings_name">Name</string>
    <string name="settings_username">Username</string>
    <string name="settings_phone">Phone Number</string>
    <string name="settings_email">Email Address</string>
    <string name="settings_password">Password</string>
    <string name="settings_password_change">Change Password</string>
    <string name="settings_support">Support</string>
    <string name="settings_rate">Rate the Game</string>
    <string name="settings_purchase">Purchase Full Version</string>
    <string name="settings_about">About</string>
    <string name="settings_about_cancel_btn">Cancel</string>
    <string name="settings_about_copyright">Copyright © 2015 MoyerSoftware</string>
    <string name="settings_password_old_hint">Old password</string>
    <string name="settings_password_new_hint">New password</string>
    <string name="settings_password_repeat_hint">Repeat password</string>
    <string name="settings_logout">Log out</string>

    <!-- Chat thread (conversation) screen -->
    <string name="thread_edit_txt_hint">Your message</string>

    <!-- Friends screen -->
    <string name="friends_requests_header">PENDING FRIENDS</string>
    <string name="friends_friends_header">FRIENDS</string>
    <string name="friends_facebook_header">SOCIAL MEDIA FRIENDS</string>
    <string name="friends_facebook_btn">INVITE FROM FACEBOOK</string>
    <string name="friends_btn">FIND FRIENDS</string>
    <string name="friends_invite_btn">INVITE CONTACTS</string>

    <!-- Join a Game screen -->
    <string name="join_title">JOIN A GAME</string>
    <string name="join_tab_id">JOIN BY ID</string>
    <string name="join_tab_location">JOIN BY LOCATION</string>
    <string name="join_title_id">Search by Game ID</string>
    <string name="join_title_location">Searching near your location…</string>
    <string name="join_header_found">GAMES FOUND</string>
    <string name="join_games_btn">JOIN</string>
    <string name="join_games_full_btn">FULL</string>
    <string name="join_placeholder">NO GAMES FOUND</string>
    <string name="join_password_hint">Game Password</string>
    <string name="activity_title_join">Play WhatTheBlank?</string>

    <!-- Join a Game (lobby) screen -->
    <string name="join_lobby_tab_game">GAME</string>
    <string name="join_lobby_tab_players">PLAYERS</string>
    <string name="join_lobby_game_header">GAME INFORMATION</string>
    <string name="join_lobby_players_header">Teams</string>
    <string name="join_lobby_title_players">Number of Players</string>
    <string name="join_lobby_title_cards">Number of Cards</string>
    <string name="join_lobby_title_time">Time per Round</string>
    <string name="join_lobby_title_wait">PLEASE WAIT WHILE OTHERS JOIN…</string>

    <!-- Host a Game screen -->
    <string name="host_title">HOST A GAME</string>
    <string name="host_id_title">Game ID</string>
    <string name="host_title_name">Game Name</string>
    <string name="host_desc_name">Name your game so players know it\'s yours</string>
    <string name="host_title_password">Game Password</string>
    <string name="host_desc_password">Needs to be at least 4 numbers</string>
    <string name="host_title_teams">Number of Teams</string>
    <string name="host_title_players">Number of Players per Team</string>
    <string name="host_title_cards">Number of Cards per Players</string>
    <string name="host_title_time">Time per Round</string>
    <string name="host_btn">CREATE GAME</string>
    <string name="host_spinner_pro_badge">PRO</string>

    <!-- Host a Game (lobby) screen -->
    <string name="host_lobby_tab_game">GAME</string>
    <string name="host_lobby_tab_players">PLAYERS</string>
    <string name="host_lobby_game_header">Teams</string>
    <string name="host_lobby_title_id">Game ID</string>
    <string name="host_lobby_title_password">Game Password</string>
    <string name="host_lobby_btn">START GAME</string>
    <string name="host_players_btn">MANUALLY ADD</string>
    <string name="host_players_placeholder">WAITING FOR PLAYERS…</string>
    <string name="host_players_add_hint">Player\'s name</string>

    <!-- Start Game (creating cards) screen -->
    <string name="start_ready_title">Are you ready to play!?</string>
    <string name="start_ready_desc">First things first… You have %1$d card(s) to create! Write a word,
        phrase, noun, verb, ANYTHING you desire using your finger. When you are done, click on the
        green check mark to go to your next card.</string>
    <string name="start_ready_btn">START</string>

    <!-- Start Game (waiting) screen -->
    <string name="start_waiting_title">Nice job with those cards!</string>
    <string name="start_waiting_desc">Now you are just waiting for all of the other players to
        finish up with their cards. The teams will go in the following order:</string>
    <string name="start_waiting_btn_desc">Click the Begin button to start the game! The game will be
    played on the Host\'s phone. Good luck!</string>
    <string name="start_waiting_btn">BEGIN</string>

    <!-- Play Game (waiting) screen -->
    <string name="play_wait_title">The game is being played on the Host\'s phone!</string>

    <!-- Play Game (card) screen -->
    <string name="play_title_start">Pass the phone to %1$s so that the game can begin.</string>
    <string name="play_title_start_2">Each team has %1$s to guess each card until all the cards are
        gone. Swipe right or left to skip the card. Click the green check if your team guessed
        correctly.</string>

    <!-- Play Game (winner) screen -->
    <string name="play_title_won">CONGRATULATIONS %1$s! You won!
        &lt;br&gt;&lt;br&gt;Play again?</string>
    <string name="play_title_won_draw">CONGRATULATIONS %1$s! Draw!
        &lt;br&gt;&lt;br&gt;Play again?</string>
    <string name="start_won_play_btn">PLAY</string>
    <string name="start_won_quit_btn">QUIT</string>

</resources>