<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.moysof.blank.typeface.TextBasicTitleBold
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="24dp"
        android:text="@string/join_lobby_game_header"
        android:textColor="@color/primary"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <com.moysof.blank.typeface.TextRobotoRegular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/join_lobby_title_players"
            android:textColor="@color/primary_text"
            android:textSize="16sp" />

        <com.moysof.blank.typeface.TextRobotoRegular
            android:id="@+id/join_lobby_players_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_text"
            android:textSize="14sp" />

        <com.moysof.blank.typeface.TextRobotoRegular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/join_lobby_title_cards"
            android:textColor="@color/primary_text"
            android:textSize="16sp" />

        <com.moysof.blank.typeface.TextRobotoRegular
            android:id="@+id/join_lobby_cards_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_text"
            android:textSize="14sp" />

        <com.moysof.blank.typeface.TextRobotoRegular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/join_lobby_title_time"
            android:textColor="@color/primary_text"
            android:textSize="16sp" />

        <com.moysof.blank.typeface.TextRobotoRegular
            android:id="@+id/join_lobby_time_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_text"
            android:textSize="14sp" />
    </LinearLayout>

    <com.moysof.blank.typeface.TextMoonFlower
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:text="@string/join_lobby_title_wait"
        android:textColor="@color/primary"
        android:textSize="32sp" />

</LinearLayout>